--- a/_posts/2019-12-12-cash-bash-2019.md
+++ b/_posts/2019-12-12-cash-bash-2019.md
@@ -12,7 +12,7 @@ press_release: false
 
 Cash Bash 2019
 
-![](/uploads/cash-bash---copy.JPG){: .center-image width="246" height="249"}&nbsp;Kankakee Community College will sponsor a "[Cash Bash](http://authoring.kcc.edu/Community/Documents/8.5x11%20cash%20bash%202019%20flyer.pdf)" with a $5,000 grand prize from 6:30-11 p.m. Saturday, Feb. 15 at the [Quality Inn & Suites](http://qualityinnbradley.com/), 800 N. Kinzie Ave. in Bradley.
+![](/uploads/cash-bash---copy.JPG){: .float-image-left width="246" height="249"}&nbsp;Kankakee Community College will sponsor a "[Cash Bash](http://authoring.kcc.edu/Community/Documents/8.5x11%20cash%20bash%202019%20flyer.pdf)" with a $5,000 grand prize from 6:30-11 p.m. Saturday, Feb. 15 at the [Quality Inn & Suites](http://qualityinnbradley.com/), 800 N. Kinzie Ave. in Bradley.
 
 There will be 24 cash prizes, totaling $7,850. To win the $5,000 grand prize or most other cash prizes, the ticket holder does not need to be present.
 
