--- a/_posts/2019-12-12-cash-bash-2020.md
+++ b/_posts/2019-12-12-cash-bash-2020.md
@@ -10,9 +10,7 @@ video_link:
 press_release: false
 ---
 
-Cash Bash 2019
-
-![](/uploads/cash-bash---copy.JPG){: .float-image-left width="246" height="249"}&nbsp;Kankakee Community College will sponsor a "[Cash Bash](http://authoring.kcc.edu/Community/Documents/8.5x11%20cash%20bash%202019%20flyer.pdf)" with a $5,000 grand prize from 6:30-11 p.m. Saturday, Feb. 15 at the [Quality Inn & Suites](http://qualityinnbradley.com/), 800 N. Kinzie Ave. in Bradley.
+![](/uploads/cash-bash---copy.JPG){: .float-image-left width="246" height="249"}Kankakee Community College will sponsor a "[Cash Bash](http://authoring.kcc.edu/Community/Documents/8.5x11%20cash%20bash%202019%20flyer.pdf)" with a $5,000 grand prize from 6:30-11 p.m. Saturday, Feb. 15 at the [Quality Inn & Suites](http://qualityinnbradley.com/), 800 N. Kinzie Ave. in Bradley.
 
 There will be 24 cash prizes, totaling $7,850. To win the $5,000 grand prize or most other cash prizes, the ticket holder does not need to be present.
 
@@ -22,4 +20,4 @@ Those at the Cash Bash can play Las Vegas-style games. Drawings for at least 20 
 
 You must be 18 years or older to purchase a Cash Bash ticket and 21 years of age or older to attend the event.
 
-For more information, or to sponsor a gift basket, call KCC’s athletic department at 815-802-8600. A ticket order form can be printed from [www.kcc.edu/cashbash](https://athletics.kcc.edu/support/cash-bash/) or picked up in the KCC Athletic Department.
+For more information, or to sponsor a gift basket, call KCC’s athletic department at 815-802-8600. A ticket order form can be printed from [kcc.edu/cashbash](https://athletics.kcc.edu/support/cash-bash/) or picked up in the KCC Athletic Department.
