Updated '_posts/2020-08-17-club-rush.md' via CloudCannon

--- a/_posts/2020-08-17-club-rush.md
+++ b/_posts/2020-08-17-club-rush.md
@@ -10,10 +10,14 @@ video_link:
 press_release: false
 ---
 
-STUDENT CLUB RUSH<br>Join, Start or Support a Student Club: &nbsp;Build leadership skills; pursue an academic, social or special interest; or meet other students and staff outside of the classroom.
+Students are invited to join in, start up or support a Student Club this fall.
 
-Did you know… students involved in student clubs and organizations not only gain excellent leadership and learning experiences, but are more likely to succeed in college. &nbsp;So what are you waiting for…Come to the virtual club fair and see how you can GET INVOLVED and GET CONNECTED. Prizes available for student attendees. &nbsp;Interested or curious, join other KCC students at the virtual Student Club Fair:
+Participation builds leadership skills; helps you pursue an academic, social or special interest; and lets you go beyond your classes to meet other students and staff.
 
-Student Club Virtual Informational Fair<br>Tuesday, September 1, 2020 and Wednesday, September 2, 2020<br>6:00 pm<br>Via this [Virtual Meeting Link](https://meet.google.com/unsupported?meetingCode=kur-uanb-cur&amp;ref=https://meet.google.com/_meet/kur-uanb-cur){: target="_blank" rel="noopener"}<br>or<br>[https://meet.google.com/kur-uanb-cur](https://meet.google.com/kur-uanb-cur)
+Students in clubs and organizations not only gain excellent leadership and learning experiences, but are more likely to succeed in college.
+
+Get started during the virtual Club Rush/Club Fair and see how you can get involved and get connected.<br>6 p.m. Tuesday, Sept. 1, 2020 and<br>6 p.m. Wednesday, Sept. 2, 2020
+
+Prizes will be available for student attendees.<br>The meeting link is [https://meet.google.com/kur-uanb-cur](https://meet.google.com/kur-uanb-cur){: target="_blank" rel="noopener"}
 
 Visit the [Student Life webpage](http://www.kcc.edu/students/studentlife/Pages/default.aspx){: target="_blank" rel="noopener"} for a list of student clubs and organizations.&nbsp;
