--- a/_posts/2020-08-17-club-rush.md
+++ b/_posts/2020-08-17-club-rush.md
@@ -2,7 +2,7 @@
 title: Club Rush
 date: 2020-08-17 04:58:00 -0500
 expire_date: 2020-09-02 00:00:00 -0500
-image: /uploads/club-rush.JPG
+image: /uploads/virtual-club-rush-403-graphic.jpg
 news_image_alt: Club Rush
 article_lead: Join a student club
 video_content: false
@@ -10,7 +10,7 @@ video_link:
 press_release: false
 ---
 
-Students are invited to join in, start up or support a Student Club this fall.
+![](/uploads/virtual-club-rush-403-graphic.jpg){: .float-image-left width="350" height="350"}Students are invited to join in, start up or support a Student Club this fall.
 
 Participation builds leadership skills; helps you pursue an academic, social or special interest; and lets you go beyond your classes to meet other students and staff.
 
