Updated '_posts/2020-08-11-give-day.md' via CloudCannon

--- a/_posts/2020-08-11-give-day.md
+++ b/_posts/2020-08-11-give-day.md
@@ -6,7 +6,7 @@ image: /uploads/give-day-logo.jpg
 news_image_alt: 'Give Day logo Aug. 27, 2020 #strongtogether'
 article_lead: Support students on Aug. 27
 video_content: false
-video_link:
+video_link: 'https://youtu.be/mbqJUT89-AY'
 press_release: false
 ---
 
