Updated '_posts/2020-08-11-give-day.md' via CloudCannon

--- a/_posts/2020-08-11-give-day.md
+++ b/_posts/2020-08-11-give-day.md
@@ -6,7 +6,7 @@ image: /uploads/give-day-logo.jpg
 news_image_alt: 'Give Day logo Aug. 27, 2020 #strongtogether'
 article_lead: Support students on Aug. 27
 video_link: 'https://youtu.be/mbqJUT89-AY'
-press_release: false
+press_release: true
 ---
 
 ![](/uploads/change-lives---sm.png){: .float-image-right width="350" height="259"}The Kankakee Community College Foundation [Give Day](http://www.kcc.edu/giveday){: target="_blank" rel="noopener"} fund drive will be on Aug. 27, 2020.<br><br>Alumni, faculty, staff, students, their families and friends can support a variety of student needs through this peer-to-peer fundraising event.&nbsp;<br><br>“Students are facing unprecedented issues because of COVID-19,” said Kelly Myers, executive director of The KCC Foundation. “Many students need technology like laptops or personal WiFi, other students need emergency assistance for things that financial aid won’t cover.&nbsp;<br><br>“The college leadership has also identified the need for an Equity, Diversity and Inclusion Center,” Myers continued. “We want to bring everyone together for an event that builds community while helping those who need it the most. Every gift will have a direct and immediate impact on KCC students.”<br><br>The three giving priorities of this fundraising event are: The Emergency Technology Fund; the Equity, Diversity and Inclusion Center Fund; and the Emergency Assistance Fund.<br><br>For Fall 2020, KCC is offering classes online, in-person and a combination of in-person and online. The Emergency Technology Fund will enable current KCC students with the technology needed for online/remote learning.&nbsp;<br><br>Currently in the planning stages, the Equity, Diversity and Inclusion Center Fund will help establish a safe, inclusive and affirming space for the entire campus community. The center will create a climate of intentional interaction and collaboration that will foster critical thinking, expand awareness of sensitive topics and increase the overall cultural competency of students, and college employees, Myers said.<br><br>The Emergency Assistance Fund supports KCC students experiencing extreme financial hardship that threatens to halt their education.<br><br>To donate, visit [kcc.edu/giveday](https://www.kcc.edu/giveday){: target="_blank" rel="noopener"}. Checks also are accepted by mail to KCC Foundation, 100 College Drive, Kankakee, IL 60901. Make checks payable to the KCC Foundation.&nbsp;<br><br>For more information, contact Myers at 815-802-8260 or [kmyers@kcc.edu](mailto:kmyers@kcc.edu). The KCC Foundation is a 501c3 organization. All donations are tax deductible.<br>&nbsp;
