--- a/_posts/2020-12-01-post-test.md
+++ b/_posts/2020-12-01-post-test.md
@@ -2,7 +2,7 @@
 title: Post
 date: 2020-12-01 00:00:00 -0600
 expire_date: 2021-01-01 00:00:00 -0600
-image:
+image: ''
 news_image_alt: Add descriptive text for the post's image
 article_lead: A short lead for the article
 video_content: false
