Updated 2 files via CloudCannon

--- a/_posts/2021-08-25-give-day.md
+++ b/_posts/2021-08-25-give-day.md
@@ -11,9 +11,9 @@ press_release: false
 ---
 <br>The Kankakee Community College Foundation will hold its annual fundraising drive called [Give Day](https://foundation.kcc.edu/giveday/) on Aug. 27, 2021.
 
-Alumni, faculty, staff, students, their families and friends can support a variety of student needs through this peer-to-peer fundraising event.&nbsp;
+Alumni, faculty, staff, students, their families and friends can support a variety of student needs through this peer-to-peer fundraising event.
 
-"We want to bring everyone together in the spirit of philanthropy, with a goal of raising $50,000 on this day,” said PJ Thompson, executive director of the KCC Foundation. “Every gift will have an impact on the lives of our students and the sustainability of the college.”&nbsp;
+"We want to bring everyone together in the spirit of philanthropy, with a goal of raising $50,000 on this day,” said PJ Thompson, executive director of the KCC Foundation. “Every gift will have an impact on the lives of our students and the sustainability of the college.”
 
 “Community college has transformed my life in a way that I have yet to find words for,” said Kyla Brychta, a 2021 KCC graduate. “I started my journey as a homeless high school student. Carrying a past of abuse and neglect, I had no hope for the future until KCC gave me a purpose. KCC donors have given me the foundation to build a life for myself, to build a future.”
 
@@ -21,6 +21,6 @@ Alumni, faculty, staff, students, their families and friends can support a varie
 
 “Every dollar counts,” Thompson continued. “All sizes of gifts are welcomed. It’s amazing, the ripple effect that your generosity can create.”
 
-To donate, visit [www.kcc.edu/giveday](https://foundation.kcc.edu/giveday/). Checks also are accepted by mail to KCC Foundation, 100 College Drive, Kankakee, IL 60901. Make checks payable to the KCC Foundation.&nbsp;
+To donate, visit [www.kcc.edu/giveday](https://foundation.kcc.edu/giveday/). Checks also are accepted by mail to KCC Foundation, 100 College Drive, Kankakee, IL 60901. Make checks payable to the KCC Foundation.
 
 For more information, contact Thompson at 815-802-8260 or [pthompson@kcc.edu](mailto:pthompson@kcc.edu). The KCC Foundation is a 501c3 organization. All donations are tax deductible.
