Updated 2 files via CloudCannon

--- a/_posts/2021-08-25-give-day.md
+++ b/_posts/2021-08-25-give-day.md
@@ -11,7 +11,7 @@ press_release: false
 ---
 <br>The Kankakee Community College Foundation will hold its annual fundraising drive called [Give Day](https://foundation.kcc.edu/giveday/) on Aug. 27, 2021.
 
-Alumni, faculty, staff, students, their families and friends can support a variety of student needs through this peer-to-peer fundraising event.
+![](/uploads/2021/giveday200x189.jpg){: .float-image-right width="200" height="189"}Alumni, faculty, staff, students, their families and friends can support a variety of student needs through this peer-to-peer fundraising event.
 
 "We want to bring everyone together in the spirit of philanthropy, with a goal of raising $50,000 on this day,” said PJ Thompson, executive director of the KCC Foundation. “Every gift will have an impact on the lives of our students and the sustainability of the college.”
 
