Upgrade to BS5, cleanup project, convert $ to vanilla...
* Upgrade project to Bootstrap 5 and new gem theme.
* Cleanup unused JS and CSS.
* Switch static JS imports to dynamic imports.
* Convert jQuery vanilla JS:
  * [TODO]: Convert `assets/js/src/newsWidget.js` to
    vanilla JS.

--- a/_posts/2023-03-28-play-ball.md
+++ b/_posts/2023-03-28-play-ball.md
@@ -9,7 +9,7 @@ video_content: false
 video_link: https://youtu.be/4d2LkGjg5bM
 press_release: false
 ---
-![](/uploads/2022/dylan-dodd-250x318.jpg){: .float-image-right.ml-1 width="250" height="318"}Dylan Dodd '18, will be on the roster as the Atlanta Braves open the 2023 baseball season.
+![](/uploads/2022/dylan-dodd-250x318.jpg){: .float-image-right.ms-1 width="250" height="318"}Dylan Dodd '18, will be on the roster as the Atlanta Braves open the 2023 baseball season.
 
 A left-hander originally from Bismark, which is near Danville, Dodd is expected to make his MLB debut on Tuesday, April 4 when the Braves play the St. Louis Cardinals.
 
